--- a/sdk/build.gradle
+++ b/sdk/build.gradle
@@ -3,20 +3,23 @@ apply plugin: 'jacoco'
 apply plugin: 'com.bmuschko.nexus'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.madgag.spongycastle:core:1.52.0.0'
-    compile 'com.madgag.spongycastle:prov:1.52.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.code.gson:gson:2.3'
+    implementation 'com.madgag.spongycastle:core:1.52.0.0'
+    implementation 'com.madgag.spongycastle:prov:1.52.0.0'
 
-    testCompile 'org.bouncycastle:bcprov-jdk15on:1.52'
-    testCompile 'com.nimbusds:nimbus-jose-jwt:4.0-rc2'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
+    testImplementation 'org.bouncycastle:bcprov-jdk15on:1.52'
+    testImplementation 'com.nimbusds:nimbus-jose-jwt:4.0-rc2'
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
 }
 
 javadoc {
     options.docTitle = "Worldpay Client Side Encryption (CSE) SDK"
     options.windowTitle = "Worldpay CSE SDK"
+    options.addStringOption('Xdoclint:none', '-quiet')
+    options.addStringOption('encoding', 'UTF-8')
+    options.addStringOption('charSet', 'UTF-8')
 }
 
 ext.nexusUsername = System.getenv('NEXUS_USER')
